testdata/golden/sema/invalid/option_no_wrap_on_mismatch.fmt
// scenario: implicit tag injection should not wrap mismatched types
fn main() {
    let x: int? = "hello";
}
